--- a/view/layout_admin.html.tmpl
+++ b/view/layout_admin.html.tmpl
@@ -44,11 +44,11 @@
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
                 <li class="active"><a href="#">Top <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">New Article</a></li>
-                <li><a href="#">Users</a></li>
+                <li><a href="/admin/article/new">New Article</a></li>
+                <li><a href="/admin/user/list">Users</a></li>
             </ul>
         </div>
-        
+
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             {{template "content" .}}
         </div>
