--- a/view/article/index.html.tmpl
+++ b/view/article/index.html.tmpl
@@ -3,7 +3,7 @@
     {{range .Articles}}
         <p>ID: {{.ID}}</p>
         <p>Title: {{.Title}}</p>
-        <p>Content: {{.Content}}</p>
+        <p>Content: {{.Content | nl2br}}</p>
         <p>CreatedAt: {{.CreatedAt.Format "2006/01/02"}}</p>
         <p>UpdatedAt: {{.UpdatedAt.Format "2006/01/02"}}</p>
     {{end}}
