--- a/view/admin/index.html.tmpl
+++ b/view/admin/index.html.tmpl
@@ -20,7 +20,7 @@
             <td>{{.Title}}</td>
             <td>{{.CreatedAt}}</td>
             <td>{{.UpdatedAt}}</td>
-            <td>編集 | 削除</td>
+            <td><a href="/admin/article/edit/{{.ID}}">編集</a> | 削除</td>
         </tr>
         {{end}}
         </tbody>
