--- a/view/layout_admin.html.tmpl
+++ b/view/layout_admin.html.tmpl
@@ -33,7 +33,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Logout</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
     </div>
@@ -43,7 +43,7 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="#">Top <span class="sr-only">(current)</span></a></li>
+                <li><a href="/admin/">Top</a></li>
                 <li><a href="/admin/article/new">New Article</a></li>
                 <li><a href="/admin/user/list">Users</a></li>
             </ul>
